# aleo-swift

./: .gitattributes  .gitignore  Aleo.xctestplan  Cargo.toml  Package.resolved  Package.swift  build-binary.sh  build-rust.sh  build.rs
AleoCore.xcframework/: Info.plist
AleoCore.xcframework/ios-arm64_x86_64-simulator/Headers/: module.modulemap
AleoCore.xcframework/macos-arm64_x86_64/Headers/: SwiftBridgeCore.h  aleo-swift.h  module.modulemap
DemoProject/AleoSwiftDemo/AleoSwiftDemo/: AleoSwiftDemoApp.swift  AleoSwiftTestPlan.xctestplan  AleoViewModel.swift  ContentView.swift
DemoProject/AleoSwiftDemo/AleoSwiftDemo.xcodeproj/: project.pbxproj
DemoProject/AleoSwiftDemo/AleoSwiftDemo.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
DemoProject/AleoSwiftDemo/AleoSwiftDemo.xcodeproj/xcshareddata/xcschemes/: AleoSwiftDemo.xcscheme
Sources/Aleo/: Account.swift  SwiftBridgeCore.swift  aleo-swift.swift
Sources/Aleo/AleoCloud/: AleoCloudClient+Models.swift  AleoCloudClient.swift  AleoCloudHost.swift  AleoCloudPath.swift  FunctionKeyProvider.swift  RecordsProvider.swift
Sources/Aleo/AleoNetwork/: CreditProgramKeys.swift  NetworkClient+Models.swift  NetworkClient.swift  NetworkError.swift  NetworkHost.swift  NetworkPath.swift  NetworkProgramManager.swift  NetworkRecordProvider.swift
Sources/Aleo/AleoNetwork/KeyProviders/: KeyProvider.swift  NetworkKeyProvider.swift
Sources/Aleo/Core/Account/: Address.swift  PrivateKey.swift  PrivateKeyCiphertext.swift  Signature.swift  ViewKey.swift
Sources/Aleo/Core/Field/: Field.swift
Sources/Aleo/Core/Programs/: FunctionType.swift  KeyPair.swift  Program.swift  ProvingKey.swift  Transaction.swift  VerifyingKey.swift
Sources/Aleo/Core/Programs/Program/: Program+FunctionInput.swift  Program.swift
Sources/Aleo/Core/Programs/ProgramManager/: CoreProgramManager.swift  ProgramManager.swift  RStringMap.swift
Sources/Aleo/Core/Record/: RecordCiphertext.swift  RecordPlaintext.swift
Tests/AleoTests/AccountTests/: AddressTests.swift  PrivateKeyCiphertextTests.swift  PrivateKeyTests.swift  SignatureTests.swift  ViewKeyTests.swift
Tests/AleoTests/NetworkTests/: NetworkClientTests.swift
Tests/AleoTests/ProgramTests/: ProgramTests.swift  ProvingKeyTests.swift  TransactionTests.swift
Tests/AleoTests/RecordTests/: RecordCiphertextTests.swift  RecordPlaintextTests.swift
aleo-swift.xcworkspace/xcshareddata/swiftpm/: Package.resolved
aleo-swift.xcworkspace/xcuserdata/nafehshoaib.xcuserdatad/: UserInterfaceState.xcuserstate
aleo-swift.xcworkspace/xcuserdata/nafehshoaib.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: lib.rs  main.rs
src/account/: address.rs  encryptor.rs  mod.rs  private_key.rs  private_key_ciphertext.rs  signature.rs  view_key.rs
src/programs/: execution.rs  execution_response.rs  key_pair.rs  mod.rs  program.rs  proving_key.rs  transaction.rs  verifying_key.rs
src/programs/manager/: macros.rs  mod.rs  program_manager.rs  string_map.rs
src/record/: mod.rs  record_ciphertext.rs  record_plaintext.rs
src/types/: field.rs  mod.rs  native.rs
(+3 files in other folders)
